--- a/styles/login.css
+++ b/styles/login.css
@@ -2,7 +2,7 @@
     font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 body{
-    background-image: url("https://i0.wp.com/medioambienteynaturaleza.com/wp-content/uploads/2015/06/Fondos-de-pantalla-de-paisajes-naturales23.jpg?resize=1110%2C624&ssl=1");
+    background-image: url("../img/fonsdepantalla.jpeg");
     background-size: 100%;
     position: relative;
 }
@@ -13,11 +13,13 @@ body{
 }
 h2{
     text-align: center;
+    color: white;
 }
 h3{
     background-color: #9EBC9F;
     height: 50px;
     font-size: 30px;
+    color: white;
 }
 .formulari{
     border: 1px solid white;
@@ -25,8 +27,31 @@ h3{
     text-align: center;
     margin: auto;
     backdrop-filter: blur(5px);
-    /* border-radius: 25px; */
+    border-radius: 5% ;
+    color: white;
 }
+.formulari > input{
+    background: transparent;
+    color: white;
+
+}
+.selectfile{
+    display: none;
+
+}
+.label:hover{
+    border: 2px solid #9EBC9F ;
+}
+.button{
+    border: none;
+    font-size: 15px;
+}
+
+::placeholder { 
+    color: white;
+    font-size: 15px;
+}
+
 .taula{
     border: 1px solid white;
     width: 50%;
@@ -66,12 +91,6 @@ nav{
     align-items: center;
     text-decoration: none;
 }
-/* footer{
-    background-color: #9EBC9F;
-    height: 50px;
-    width: 99%;
-    position: absolute;
-} */
 .logo{
     height: 100px;
     width: 100px;
@@ -100,7 +119,6 @@ nav{
     text-align: center;
 }
 .registra{
-    
     text-decoration: none;
     height: 50px;
     width: 100px;
@@ -121,7 +139,7 @@ a:visited{
 }
 .photo{
     height: 50px;
-    width: 100px;
+    width: 50px;
 }
 .titols{
     background-color: #D3B88C;
