--- a/styles/login.css
+++ b/styles/login.css
@@ -45,6 +45,8 @@ h3{
 .button{
     border: none;
     font-size: 15px;
+    background: transparent;
+    color: white;
 }
 
 ::placeholder { 
@@ -85,12 +87,17 @@ nav{
     text-decoration: none;
     font-weight: bold;
 }
+
+
 .menu{
     padding-left: 2%;
     padding-right: 2%;
     align-items: center;
     text-decoration: none;
 }
+
+
+
 .logo{
     height: 100px;
     width: 100px;
