--- a/styles/login.css
+++ b/styles/login.css
@@ -2,7 +2,7 @@
     font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 body{
-    background-image: url("../img/fonsdepantalla.jpeg");
+    background-image: url("../img/fondo.jpg");
     background-size: 100%;
     position: relative;
 }
